--- a/assets/scss/news/components/_components.horo-card.scss
+++ b/assets/scss/news/components/_components.horo-card.scss
@@ -7,15 +7,18 @@ $card-height: 320px;
     user-select: none;
     overflow: hidden;
     border-radius: 4px;
-    background-color: darken($bg-color, 10%);
+    background-color: #333;
     padding: $global-spacing-unit-small $global-spacing-unit;
     text-align: center;
+    background-image: url('//assets.ournetcdn.net/ournet.img/horo/night-sky-480.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
 .c-horo-card__title {
     font-size: 120%;
     font-weight: 600;
-    color: $text-color !important;
+    color: $yellow !important;
 }
 
 .c-horo-card__list {
@@ -43,7 +46,7 @@ $card-height: 320px;
             display: block;
             height: 100%;
             width: 100%;
-            fill: $accent-color;
+            fill: #f1f1f1;
         }
     }
 }
