base ournet routes

--- a/assets/scss/news/components/_components.horo-card.scss
+++ b/assets/scss/news/components/_components.horo-card.scss
@@ -10,7 +10,7 @@ $card-height: 320px;
     background-color: #333;
     padding: $global-spacing-unit-small $global-spacing-unit;
     text-align: center;
-    background-image: url('//assets.ournetcdn.net/ournet.img/horo/night-sky-480.jpg');
+    background-image: url('//assets.ournetcdn.net/ournet/img/horo/night-sky-480.jpg');
     background-position: center;
     background-size: cover;
 }
