inited weather app

--- a/assets/scss/weather/components/_components.header.scss
+++ b/assets/scss/weather/components/_components.header.scss
@@ -1,6 +1,6 @@
 
 .c-header {
-    .c-header__item {
-        margin-top: $header-height / 4;
+    .c-search {
+        margin-top: $header-height / 3.4;
     }
 }
