--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -108,7 +108,7 @@
 @import "../../../node_modules/inuitcss/elements/elements.page";
 @import "../../../node_modules/inuitcss/elements/elements.headings";
 @import "../../../node_modules/inuitcss/elements/elements.images";
-@import "../../../node_modules/inuitcss/elements/elements.tables";
+// @import "../../../node_modules/inuitcss/elements/elements.tables";
 
 
 
@@ -119,16 +119,16 @@
 // Uncomment and add to this section as necessary.
 @import "../../../node_modules/inuitcss/objects/objects.wrapper";
 @import "../../../node_modules/inuitcss/objects/objects.layout";
-@import "../../../node_modules/inuitcss/objects/objects.media";
-@import "../../../node_modules/inuitcss/objects/objects.flag";
-@import "../../../node_modules/inuitcss/objects/objects.list-bare";
-@import "../../../node_modules/inuitcss/objects/objects.list-inline";
-@import "../../../node_modules/inuitcss/objects/objects.box";
-@import "../../../node_modules/inuitcss/objects/objects.block";
-@import "../../../node_modules/inuitcss/objects/objects.ratio";
-@import "../../../node_modules/inuitcss/objects/objects.crop";
-@import "../../../node_modules/inuitcss/objects/objects.table";
-@import "../../../node_modules/inuitcss/objects/objects.pack";
+// @import "../../../node_modules/inuitcss/objects/objects.media";
+// @import "../../../node_modules/inuitcss/objects/objects.flag";
+// @import "../../../node_modules/inuitcss/objects/objects.list-bare";
+// @import "../../../node_modules/inuitcss/objects/objects.list-inline";
+// @import "../../../node_modules/inuitcss/objects/objects.box";
+// @import "../../../node_modules/inuitcss/objects/objects.block";
+// @import "../../../node_modules/inuitcss/objects/objects.ratio";
+// @import "../../../node_modules/inuitcss/objects/objects.crop";
+// @import "../../../node_modules/inuitcss/objects/objects.table";
+// @import "../../../node_modules/inuitcss/objects/objects.pack";
 
 @import "../base/objects/objects.wrapper";
 
@@ -165,6 +165,8 @@
 @import "./components/components.weather-report";
 @import "./components/components.latest-news";
 
+@import "../base/components/components.error";
+@import "../news/components/components.event-list-item";
 
 // UTILITIES
 
