--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -153,6 +153,7 @@
 @import "../base/components/components.footer";
 @import "../base/components/components.share";
 @import "../base/components/components.subscribe-bar";
+@import "../base/components/components.section";
 
 @import "./components/components.header";
 @import "./components/components.breadcrumb";
