--- a/assets/scss/weather/components/_components.page-title.scss
+++ b/assets/scss/weather/components/_components.page-title.scss
@@ -2,14 +2,14 @@
 .c-page-title {
     margin-bottom: 20px;
     h1 {
-        font-weight: normal;
+        font-weight: 500;
         margin-bottom: $global-spacing-unit-small;
         font-size: 1.8rem;
     }
     h2 {
         font-weight: normal;
         margin-bottom: $global-spacing-unit-small;
-        font-size: 0.9rem;
+        font-size: 90%;
         color: $gray;
     }
 }
