--- a/assets/scss/weather/page-widget.scss
+++ b/assets/scss/weather/page-widget.scss
@@ -5,6 +5,7 @@
 @import "../base/settings.global";
 @import "settings/settings.global";
 
+@import "../../../node_modules/inuitcss/elements/elements.tables";
 
 @import "../base/components/components.buttons";
 @import "../base/components/components.autocomplete";
