--- a/assets/scss/horoscope/components/_components.page-title.scss
+++ b/assets/scss/horoscope/components/_components.page-title.scss
@@ -2,7 +2,7 @@
 .c-page-title {
     margin-bottom: 20px;
     h1 {
-        font-weight: normal;
+        font-weight: 500;
         margin-bottom: $global-spacing-unit-small;
         font-size: 1.8rem;
     }
