--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -108,7 +108,7 @@
 @import "../../../node_modules/inuitcss/elements/elements.page";
 @import "../../../node_modules/inuitcss/elements/elements.headings";
 @import "../../../node_modules/inuitcss/elements/elements.images";
-@import "../../../node_modules/inuitcss/elements/elements.tables";
+// @import "../../../node_modules/inuitcss/elements/elements.tables";
 
 
 
@@ -119,16 +119,16 @@
 // Uncomment and add to this section as necessary.
 @import "../../../node_modules/inuitcss/objects/objects.wrapper";
 @import "../../../node_modules/inuitcss/objects/objects.layout";
-@import "../../../node_modules/inuitcss/objects/objects.media";
-@import "../../../node_modules/inuitcss/objects/objects.flag";
-@import "../../../node_modules/inuitcss/objects/objects.list-bare";
-@import "../../../node_modules/inuitcss/objects/objects.list-inline";
-@import "../../../node_modules/inuitcss/objects/objects.box";
-@import "../../../node_modules/inuitcss/objects/objects.block";
-@import "../../../node_modules/inuitcss/objects/objects.ratio";
-@import "../../../node_modules/inuitcss/objects/objects.crop";
-@import "../../../node_modules/inuitcss/objects/objects.table";
-@import "../../../node_modules/inuitcss/objects/objects.pack";
+// @import "../../../node_modules/inuitcss/objects/objects.media";
+// @import "../../../node_modules/inuitcss/objects/objects.flag";
+// @import "../../../node_modules/inuitcss/objects/objects.list-bare";
+// @import "../../../node_modules/inuitcss/objects/objects.list-inline";
+// @import "../../../node_modules/inuitcss/objects/objects.box";
+// @import "../../../node_modules/inuitcss/objects/objects.block";
+// @import "../../../node_modules/inuitcss/objects/objects.ratio";
+// @import "../../../node_modules/inuitcss/objects/objects.crop";
+// @import "../../../node_modules/inuitcss/objects/objects.table";
+// @import "../../../node_modules/inuitcss/objects/objects.pack";
 
 @import "../base/objects/objects.wrapper";
 
@@ -144,6 +144,7 @@
 @import "../base/components/components.header";
 @import "../base/components/components.capital-forecast";
 @import "../base/components/components.group";
+@import "../base/components/components.section";
 @import "../base/components/components.zs-icon";
 @import "../base/components/components.nodata";
 @import "../base/components/components.ad";
@@ -155,8 +156,9 @@
 @import "./components/components.header";
 @import "./components/components.page-title";
 @import "../weather/components/components.weather-icons";
+@import "../news/components/components.event-list-item";
 
-@import "./components/components.latest-news";
+
 @import "./components/components.menu";
 @import "./components/components.report";
 @import "./components/components.api-doc";
