--- a/assets/scss/horoscope/components/_components.report.scss
+++ b/assets/scss/horoscope/components/_components.report.scss
@@ -52,7 +52,7 @@ $report-border-color: darken($bg-color, 5%);
         margin: 0px 6px;
         border-bottom: 2px solid #fff;
         text-align: center;
-        font-weight: bold;
+        font-weight: 500;
         padding: 0px 2px;
         color: $accent-color;
     }
