horoscope signs line

--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -128,7 +128,7 @@
 // @import "../../../node_modules/inuitcss/objects/objects.ratio";
 // @import "../../../node_modules/inuitcss/objects/objects.crop";
 // @import "../../../node_modules/inuitcss/objects/objects.table";
-// @import "../../../node_modules/inuitcss/objects/objects.pack";
+@import "../../../node_modules/inuitcss/objects/objects.pack";
 
 @import "../base/objects/objects.wrapper";
 
