--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -29,6 +29,17 @@ $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
+$color-1:    $blue !default;
+$color-2: #6786CE !default;
+$color-3: #6A67CE !default;
+$color-4:    $pink !default;
+$color-5:     $red !default;
+$color-6:  $orange !default;
+$color-7:  $yellow !default;
+$color-8:   $green !default;
+$color-9:    $teal !default;
+$color-10:    $cyan !default;
+
 $primary:       $blue !default;
 $secondary:     #435a66 !default;
 $success:       $green !default;
