--- a/assets/scss/base/components/_components.aline.scss
+++ b/assets/scss/base/components/_components.aline.scss
@@ -9,43 +9,43 @@
 }
 
 .c-aline__1 {
-    background-color: $blue;
+    background-color: $color-1;
 }
 
 .c-aline__2 {
-    background-color: $indigo;
+    background-color: $color-2;
 }
 
 .c-aline__3 {
-    background-color: $purple;
+    background-color: $color-3;
 }
 
 .c-aline__4 {
-    background-color: $pink;
+    background-color: $color-4;
 }
 
 .c-aline__5 {
-    background-color: $red;
+    background-color: $color-5;
 }
 
 .c-aline__6 {
-    background-color: $orange;
+    background-color: $color-6;
 }
 
 .c-aline__7 {
-    background-color: $yellow;
+    background-color: $color-7;
 }
 
 .c-aline__8 {
-    background-color: $green;
+    background-color: $color-8;
 }
 
 .c-aline__9 {
-    background-color: $teal;
+    background-color: $color-9;
 }
 
 .c-aline__10 {
-    background-color: $cyan;
+    background-color: $color-10;
 }
 
 .c-aline--small {
