--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -155,7 +155,7 @@
 @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.section";
 
-@import "./components/components.header";
+// @import "./components/components.header";
 @import "./components/components.breadcrumb";
 @import "./components/components.page-title";
 @import "./components/components.weather-icons";
