fix news trending menu position

--- a/assets/scss/news/components/_components.trend-menu.scss
+++ b/assets/scss/news/components/_components.trend-menu.scss
@@ -1,11 +1,8 @@
 .c-trend-menu {
-    margin-bottom: $global-spacing-unit;
+    margin-bottom: $global-spacing-unit-small;
     overflow: hidden;
     white-space: nowrap;
     text-align: center;
-    position: relative;
-    margin-top: -$global-spacing-unit + 2;
-    position: relative;
 }
 
 .c-trend-menu__l {
