--- a/assets/scss/news/components/_components.event.scss
+++ b/assets/scss/news/components/_components.event.scss
@@ -20,7 +20,7 @@
 }
 
 .c-event__title {
-    font-weight: normal;
+    font-weight: 500;
     margin-bottom: $global-spacing-unit-small;
     a {
         color: $text-color;
