--- a/assets/scss/news/main.scss
+++ b/assets/scss/news/main.scss
@@ -154,6 +154,7 @@
 @import "../base/components/components.section";
 
 @import "../base/components/components.error";
+@import "../base/components/components.sticky-title";
 
 @import "../weather/components/components.weather-icons";
 
