--- a/assets/scss/base/components/_components.sticky-title.scss
+++ b/assets/scss/base/components/_components.sticky-title.scss
@@ -7,10 +7,12 @@ $title-height: 42px;
     top: 0px;
     left: 0px;
     right: 0px;
-    background-color: white;
+    background-color: $accent-color;
+    color: #fff;
     box-shadow: 0px 2px 2px rgba($color: #666666, $alpha: .2);
     z-index: 100;
     max-width: 100%;
+    overflow: hidden;
     &.c-sticky-title--fixed {
         display: block;
     }
@@ -23,6 +25,7 @@ $title-height: 42px;
     font-weight: 500;
     white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 .c-sticky-title.v--large {
     padding-top: ($title-height - 32) / 2;
@@ -33,4 +36,9 @@ $title-height: 42px;
     text-align: center;
     max-width: 100%;
     overflow: hidden;
+    .c-share__item,.c-share__icon {
+        height: $title-height;
+        border-radius: 0;
+        margin: 0px;
+    }
 }
