--- a/assets/scss/base/components/_components.sticky-title.scss
+++ b/assets/scss/base/components/_components.sticky-title.scss
@@ -9,7 +9,7 @@ $title-height: 42px;
     right: 0px;
     background-color: $accent-color;
     color: #fff;
-    box-shadow: 0px 2px 2px rgba($color: #666666, $alpha: .2);
+    box-shadow: 0 8px 24px 0 rgba(0,0,0,0.15);
     z-index: 100;
     max-width: 100%;
     overflow: hidden;
@@ -19,7 +19,7 @@ $title-height: 42px;
 }
 .c-sticky-title__h {
     margin: 0px;
-    padding-top: ($title-height - 20) / 2;
+    padding-top: ($title-height - 20) / 2 - 1;
     line-height: 20px;
     font-size: 16px;
     font-weight: 500;
@@ -28,14 +28,22 @@ $title-height: 42px;
     text-overflow: ellipsis;
 }
 .c-sticky-title.v--large {
-    padding-top: ($title-height - 32) / 2;
-    line-height: 32px;
-    font-size: 24px;
+    .c-sticky-title__h {
+        padding-top: ($title-height - 32) /  2 - 2;
+        line-height: 32px;
+        font-size: 24px;
+    }
 }
 .c-sticky-title__share {
     text-align: center;
     max-width: 100%;
     overflow: hidden;
+    .c-share__item {
+        background-color: transparent;
+        &:hover {
+            background-color: rgba(0,0,0,.15);
+        }
+    }
     .c-share__item,.c-share__icon {
         height: $title-height;
         border-radius: 0;
