weather & horo sticky title

--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -153,6 +153,7 @@
 @import "../base/components/components.share";
 // @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.error";
+@import "../base/components/components.sticky-title";
 
 @import "./components/components.page-title";
 @import "../weather/components/components.weather-icons";
