--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -154,6 +154,7 @@
 @import "../base/components/components.share";
 @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.section";
+@import "../base/components/components.sticky-title";
 // @import "../base/components/components.horo-box";
 
 // @import "./components/components.header";
