horoscope add ad card

--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -163,6 +163,7 @@
 @import "./components/components.menu";
 @import "./components/components.report";
 @import "./components/components.api-doc";
+@import "./components/components.app-ad";
 
 
 // UTILITIES
