#ccc search control boders

--- a/assets/scss/base/components/_components.search.scss
+++ b/assets/scss/base/components/_components.search.scss
@@ -11,7 +11,7 @@ $search-height: 28px;
     width: 100%;
     border-radius: $global-radius;
     padding: 4px 7px;
-    border: 1px solid $mute-color;
+    border: 1px solid #ccc;
 }
 
 .c-search__btn {
