--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -54,6 +54,7 @@ $dark-bg-color: darken($bg-color, 5%);
 $darker-bg-color: darken($bg-color, 10%);
 $text-color: #333;
 $accent-color: $red;
+$second-color: #2b363c;
 $gray: #999;
 $mute-color: $gray;
 
