--- a/assets/scss/base/components/_components.logo.scss
+++ b/assets/scss/base/components/_components.logo.scss
@@ -53,4 +53,8 @@ $logo-height: 36px;
     float: left;
     position: relative;
     bottom: -2px;
+    svg {
+        height: 100%;
+        width: 100%;
+    }
 }
