--- a/assets/scss/news/components/_components.event-media.scss
+++ b/assets/scss/news/components/_components.event-media.scss
@@ -15,6 +15,7 @@
         min-width: 100%;
     }
 }
+
 .c-event-media__stats {
     position: absolute;
     top: $global-spacing-unit;
@@ -24,8 +25,7 @@
         display: inline-block;
         padding: 2px 12px;
         margin-left: 12px;
-        color: white;
-        // border-radius: $global-radius;
+        color: white; // border-radius: $global-radius;
         opacity: .68;
         text-align: center;
         line-height: 1.3;
@@ -37,13 +37,13 @@
         }
     }
 }
+
 // .c-event-media__stats-i {
 //     background-color: $primary;
 // }
 // .c-event-media__stats-v {
 //     background-color: $accent-color;
 // }
-
 .c-event-media__copy {
     display: inline-block;
     position: absolute;
@@ -54,4 +54,55 @@
     font-size: 90%;
     color: white;
     padding: 2px $global-spacing-unit-small;
+}
+
+$media-icon-size: 80px;
+$media-icon-bg-color: #fff;
+$media-icon-color: $accent-color;
+
+.c-event-media__vi {
+    position: absolute;
+    width: $media-icon-size;
+    height: $media-icon-size;
+    border-radius: 100%;
+    background: $media-icon-bg-color;
+    opacity: .7;
+    top: 50%;
+    left: 50%;
+    margin-top: -($media-icon-size / 2);
+    margin-left: -($media-icon-size / 2);
+    cursor: pointer;
+    box-shadow: 0px 0px 20px 0px rgba(#333, .7);
+    &:after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -($media-icon-size / 10);
+        margin-top: -($media-icon-size / 6);
+        width: 0;
+        height: 0;
+        border-top: ($media-icon-size / 5) solid transparent;
+        border-bottom: ($media-icon-size / 5) solid transparent;
+        border-left: ($media-icon-size / 4) solid $media-icon-color;
+    }
+}
+
+.c-event-media__hover {
+    display: none;
+    position: absolute;
+    left:0px;
+    top:0px;
+    right:0px;
+    bottom:0px;
+    background: #333;
+    opacity: .3;
+}
+
+.c-event-media.v--video{
+    &:hover{
+        .c-event-media__hover{
+            display: block;
+        }
+    }
 }
