--- a/assets/scss/news/components/_components.event-media.scss
+++ b/assets/scss/news/components/_components.event-media.scss
@@ -56,30 +56,29 @@
     padding: 2px $global-spacing-unit-small;
 }
 
-$media-icon-size: 80px;
-$media-icon-bg-color: #fff;
-$media-icon-color: $accent-color;
+$media-icon-size: 60px;
+$media-icon-bg-color: $accent-color;
+$media-icon-color: #fff;
 
 .c-event-media__vi {
     position: absolute;
-    width: $media-icon-size;
+    width: $media-icon-size + $media-icon-size / 2;
     height: $media-icon-size;
-    border-radius: 100%;
     background: $media-icon-bg-color;
+    border-radius: 5px;
     opacity: .7;
-    top: 50%;
-    left: 50%;
-    margin-top: -($media-icon-size / 2);
-    margin-left: -($media-icon-size / 2);
+    top: 10%;
+    left: 5%;
+    // margin-top: -($media-icon-size / 2);
+    // margin-left: -($media-icon-size / 2);
     cursor: pointer;
-    box-shadow: 0px 0px 20px 0px rgba(#333, .7);
     &:after {
         content: "";
         position: absolute;
         top: 50%;
         left: 50%;
         margin-left: -($media-icon-size / 10);
-        margin-top: -($media-icon-size / 6);
+        margin-top: -($media-icon-size / 5);
         width: 0;
         height: 0;
         border-top: ($media-icon-size / 5) solid transparent;
@@ -103,6 +102,9 @@ $media-icon-color: $accent-color;
     &:hover{
         .c-event-media__hover{
             display: block;
+        }
+        .c-event-media__vi {
+            opacity: 1;
         }
     }
 }
