--- a/assets/scss/news/gallery.scss
+++ b/assets/scss/news/gallery.scss
@@ -1,2 +1,79 @@
 
 @import "../../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox";
+
+.fancybox-slide--iframe {
+
+    .fancybox-content{
+        margin: 0!important;
+        max-width: 100%;
+        width: 100%;
+        padding-top: 56.2%; /* (9/16 * 100%) -- your aspect ratio in percents */
+        height: 0 !important;
+        background: transparent;
+
+        /* don't go full width on wide screens */
+        @media all and (min-width: 800px) {
+            max-width: 70%;
+            width: 70%;
+            padding-top: 39.34%;  /* (9/16 * 70%) -- smaller aspect ratio in percents */
+        }
+
+        .fancybox-iframe{ 
+            position: absolute; 
+            top: 0; 
+            left: 0; 
+            right: 0; 
+            bottom: 0;
+        }
+
+    }
+}
+
+.fancybox-toolbar div {
+    display: inline-block;
+    height: 44px;
+    line-height: 42px;
+    background: rgba(30,30,30,0.6);
+    color: #ccc;
+    font-size: 12px;
+    font-weight: bold;
+    min-width: 42px;
+    text-align: center;
+    white-space: nowrap;
+}
+
+@media all and (min-width: 480px) {
+
+  .fancybox-thumbs {
+    top: auto;
+    width: auto;
+    bottom: 0;
+    left: 0;
+    right : 0;
+    height: 95px;
+    padding: 10px 10px 0 10px;
+    box-sizing: border-box;
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  .fancybox-show-thumbs .fancybox-inner {
+    right: 0;
+    bottom: 95px;
+    overflow: visible;
+  }
+
+  .fancybox-thumbs::-webkit-scrollbar {
+    height: 7px;
+  }
+
+  .fancybox-thumbs::-webkit-scrollbar-track {
+    background: #2a2a2a;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+
+  .fancybox-thumbs::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 10px;
+  }
+}
