weather: facebook page like no sticky title

--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -154,7 +154,8 @@
 @import "../base/components/components.share";
 @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.section";
-@import "../base/components/components.sticky-title";
+@import "../base/components/components.fb-plike";
+// @import "../base/components/components.sticky-title";
 // @import "../base/components/components.horo-box";
 
 // @import "./components/components.header";
