--- a/assets/scss/base/components/_components.aline.scss
+++ b/assets/scss/base/components/_components.aline.scss
@@ -1,57 +1,4 @@
 .c-aline {
-    display: block;
     height: 6px;
-    div {
-        float: left;
-        width: percentage(1 / 10);
-        height: 100%;
-    }
-}
-
-.c-aline__1 {
-    background-color: $color-1;
-}
-
-.c-aline__2 {
-    background-color: $color-2;
-}
-
-.c-aline__3 {
-    background-color: $color-3;
-}
-
-.c-aline__4 {
-    background-color: $color-4;
-}
-
-.c-aline__5 {
-    background-color: $color-5;
-}
-
-.c-aline__6 {
-    background-color: $color-6;
-}
-
-.c-aline__7 {
-    background-color: $color-7;
-}
-
-.c-aline__8 {
-    background-color: $color-8;
-}
-
-.c-aline__9 {
-    background-color: $color-9;
-}
-
-.c-aline__10 {
-    background-color: $color-10;
-}
-
-.c-aline--small {
-    height: 4px;
-}
-
-.c-aline--tiny {
-    height: 2px;
+    background: $accent-color;
 }
