--- a/assets/scss/news/main.scss
+++ b/assets/scss/news/main.scss
@@ -154,11 +154,11 @@
 @import "../base/components/components.section";
 
 @import "../base/components/components.error";
-@import "../base/components/components.sticky-title";
+@import "../base/components/components.page-menu";
+@import "../base/components/components.page-content-section";
 
 @import "../weather/components/components.weather-icons";
 
-@import "./components/components.trend-menu";
 @import "./components/components.page-title";
 
 @import "./components/components.event-list-item";
