--- a/assets/scss/news/settings/_settings.global.scss
+++ b/assets/scss/news/settings/_settings.global.scss
@@ -18,3 +18,5 @@ $global-transition: all 300ms ease-in-out;
 // bloat your CSS, depending of the amount of breakpoints you defined.
 // Only set this to `true` if you are absolutely sure about what you are doing.
 $inuit-offsets: false;
+
+$accent-color: $news-accent-color;
