--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -142,7 +142,7 @@
 @import "../base/components/components.aline";
 @import "../base/components/components.logo";
 @import "../base/components/components.search";
-@import "../base/components/components.mobile-menu";
+// @import "../base/components/components.mobile-menu";
 @import "../base/components/components.header";
 @import "../base/components/components.capital-forecast";
 @import "../base/components/components.group";
