every project with its accent color

--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -59,8 +59,10 @@ $mute-color: $gray;
 $link-color: $primary;
 
 $text-color: #333;
-$accent-color: $red;
 $second-color: #2b363c;
+
+$accent-color: $red;
+$main-accent-color: $red;
 $news-accent-color: $red;
 $weather-accent-color: $blue;
 $horo-accent-color: #c84697;
