--- a/assets/scss/base/components/_components.logo.scss
+++ b/assets/scss/base/components/_components.logo.scss
@@ -28,7 +28,7 @@ $logo-height: 36px;
             display: inline-block;
             height: 10px;
             width: 10px;
-            background: $accent-color;
+            background: $red;
             border-radius: 50%;
             margin-left: 4px;
         }
@@ -36,13 +36,13 @@ $logo-height: 36px;
 }
 
 .c-logo-image_t2 {
-    color: $accent-color;
+    color: $red;
 }
 .c-logo-image_t1 {
     color: lighten($second-color, 12%);
 }
 .c-logo-image_n {
-    color: $accent-color;
+    color: $red;
     font-size: 110%;
 }
 
