--- a/assets/scss/base/components/_components.header.scss
+++ b/assets/scss/base/components/_components.header.scss
@@ -6,13 +6,13 @@ $header-height: 60px !default;
     >div.o-layout__item{
         height: 40px;
     }
-    .c-cap {
-        margin-top: 4px;
-    }
+    // .c-cap {
+        // margin-top: 4px;
+    // }
     .c-menu {
         margin-top: 4px;
     }
     .c-search {
-        margin-top: 4px;
+        margin-top: 3px;
     }
 }
