--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -139,6 +139,7 @@
 //
 // Build and include your project’s UI components here.
 // @import "components/example.components.buttons";
+@import "../base/components/components.error";
 @import "../base/components/components.aline";
 @import "../base/components/components.logo";
 @import "../base/components/components.search";
@@ -155,6 +156,9 @@
 @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.section";
 @import "../base/components/components.fb-plike";
+@import "../base/components/components.header-menu";
+@import "../base/components/components.page-menu";
+@import "../base/components/components.page-content-section";
 // @import "../base/components/components.sticky-title";
 // @import "../base/components/components.horo-box";
 
@@ -162,14 +166,13 @@
 @import "./components/components.breadcrumb";
 @import "./components/components.page-title";
 @import "./components/components.weather-icons";
-@import "./components/components.explore-menu";
+// @import "./components/components.explore-menu";
 @import "./components/components.forecast-browser";
 
 @import "./components/components.places-list";
 @import "./components/components.weather-report";
 @import "./components/components.latest-news";
 
-@import "../base/components/components.error";
 @import "../news/components/components.event-list-item";
 
 // UTILITIES
