weather red accent color

--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -64,7 +64,7 @@ $second-color: #2b363c;
 $accent-color: $red;
 $main-accent-color: $red;
 $news-accent-color: $red;
-$weather-accent-color: $blue;
+$weather-accent-color: $red;
 $horo-accent-color: #c84697;
 
 // Standardise some UI treatments.
