--- a/assets/scss/base/components/_components.page-menu.scss
+++ b/assets/scss/base/components/_components.page-menu.scss
@@ -17,6 +17,9 @@
     max-width: 160px;
     text-overflow: ellipsis;
     padding-bottom: 3px;
+    &:first-child {
+        padding-left: 0px;
+    }
     a {
         color: $text-color;
         text-decoration: none;
