--- a/assets/scss/weather/settings/_settings.global.scss
+++ b/assets/scss/weather/settings/_settings.global.scss
@@ -11,6 +11,7 @@
 
 $global-radius: 3px;
 $global-transition: all 300ms ease-in-out;
+$weather-accent-color: $main-accent-color;
 $accent-color: $weather-accent-color;
 
 // $global-font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
