--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -153,14 +153,16 @@
 @import "../base/components/components.share";
 // @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.error";
-@import "../base/components/components.sticky-title";
+// @import "../base/components/components.sticky-title";
+@import "../base/components/components.header-menu";
+@import "../base/components/components.page-menu";
+@import "../base/components/components.page-content-section";
 
 @import "./components/components.page-title";
 @import "../weather/components/components.weather-icons";
 @import "../news/components/components.event-list-item";
 
 
-@import "./components/components.menu";
 @import "./components/components.report";
 @import "./components/components.api-doc";
 @import "./components/components.app-ad";
