--- a/assets/scss/horoscope/settings/_settings.global.scss
+++ b/assets/scss/horoscope/settings/_settings.global.scss
@@ -12,6 +12,8 @@
 $global-radius: 3px;
 $global-transition: all 300ms ease-in-out;
 
+$accent-color: $horo-accent-color;
+
 // $global-font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 // Be aware that enabling offsets produces a large chunk of classes which might
