horoscope red accent color

--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -65,7 +65,7 @@ $accent-color: $red;
 $main-accent-color: $red;
 $news-accent-color: $red;
 $weather-accent-color: $red;
-$horo-accent-color: #c84697;
+$horo-accent-color: $red;
 
 // Standardise some UI treatments.
 
