--- a/assets/scss/horoscope/settings/_settings.global.scss
+++ b/assets/scss/horoscope/settings/_settings.global.scss
@@ -12,7 +12,7 @@
 $global-radius: 3px;
 $global-transition: all 300ms ease-in-out;
 
-$accent-color: $horo-accent-color;
+$accent-color: $main-accent-color;
 
 // $global-font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
