--- a/assets/scss/portal/main.scss
+++ b/assets/scss/portal/main.scss
@@ -150,27 +150,18 @@
 // @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
 @import "../base/components/components.share";
+
 @import "../base/components/components.header-menu";
-// @import "../base/components/components.section";
+@import "../base/components/components.page-menu";
+@import "../base/components/components.page-content-section";
 
 @import "../base/components/components.error";
 
 @import "../weather/components/components.weather-icons";
 
-@import "../news/components/components.trend-menu";
-// @import "./components/components.page-title";
-
 @import "../news/components/components.event-list-item";
-// @import "./components/components.event-media";
-// @import "./components/components.event";
 
 @import "../news/components/components.quote-list-item";
-
-// @import "./components/components.item-list-item";
-
-// @import "./components/components.topic-list-item";
-
-// @import "./components/components.topic";
 
 @import "../news/components/components.horo-card";
 
