--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -171,6 +171,8 @@
 
 @import "./components/components.places-list";
 @import "./components/components.weather-report";
+@import "./components/components.wind-dir-icon";
+
 @import "./components/components.latest-news";
 
 @import "../news/components/components.event-list-item";
