--- a/assets/scss/base/components/_components.logo.scss
+++ b/assets/scss/base/components/_components.logo.scss
@@ -39,7 +39,7 @@ $logo-height: 36px;
     color: $red;
 }
 .c-logo-image_t1 {
-    color: lighten($second-color, 12%);
+    color: lighten($text-color, 12%);
 }
 .c-logo-image_n {
     color: $red;
