--- a/assets/scss/news/components/_components.event.scss
+++ b/assets/scss/news/components/_components.event.scss
@@ -50,38 +50,38 @@
     padding-top: $global-spacing-unit-small;
 }
 
-.c-event__items {
-    margin: $global-spacing-unit-small 0px;
-    list-style: none;
-    color: lighten($text-color, 20%);
-    font-size: 85%;
-    li {
-        @include inuit-clearfix();
-        margin-bottom: $global-spacing-unit-tiny;
-    }
-    span {
-        float: left;
-        color: $success;
-        display: block;
-        width: 13%;
-        white-space: nowrap;
-        overflow: hidden;
-        margin-right: $global-spacing-unit-small;
-        position: relative;
-        // border-bottom: 1px dashed $mute-color;
-        // text-decoration: underline;
-        // text-decoration-style: dotted;
-        // text-decoration-color: $mute-color;
-        &:after {
-            content: ':';
-            color: $mute-color;
-        }
-    }
-    a {
-        overflow: hidden;
-        display: block;
-    }
-}
+// .c-event__items {
+//     margin: $global-spacing-unit-small 0px;
+//     list-style: none;
+//     color: lighten($text-color, 20%);
+//     font-size: 85%;
+//     li {
+//         @include inuit-clearfix();
+//         margin-bottom: $global-spacing-unit-tiny;
+//     }
+//     span {
+//         float: left;
+//         color: $success;
+//         display: block;
+//         width: 13%;
+//         white-space: nowrap;
+//         overflow: hidden;
+//         margin-right: $global-spacing-unit-small;
+//         position: relative;
+//         // border-bottom: 1px dashed $mute-color;
+//         // text-decoration: underline;
+//         // text-decoration-style: dotted;
+//         // text-decoration-color: $mute-color;
+//         &:after {
+//             content: ':';
+//             color: $mute-color;
+//         }
+//     }
+//     a {
+//         overflow: hidden;
+//         display: block;
+//     }
+// }
 
 .c-text-link {
     font-weight: 500;
