--- a/assets/scss/news/components/_components.topic-list-item.scss
+++ b/assets/scss/news/components/_components.topic-list-item.scss
@@ -8,9 +8,10 @@
 
 .c-topic-it--tag {
     margin-right: 6px;
-    padding: 1px 6px;
+    padding: 2px 8px;
     background-color: #e3e3e3;
     color: $text-color !important;
     text-decoration: none !important;
     font-weight: 500;
+    border-radius: $global-radius;
 }
