--- a/assets/scss/news/components/_components.event-list-item.scss
+++ b/assets/scss/news/components/_components.event-list-item.scss
@@ -64,7 +64,7 @@ $media-icon-color: #fff;
     height: $media-icon-size;
     background: $media-icon-bg-color;
     border-radius: 3px;
-    opacity: .5;
+    opacity: 1;
     top: 20px;
     left: 20px;
     // margin-top: -($media-icon-size / 2);
