--- a/assets/scss/news/components/_components.event-media.scss
+++ b/assets/scss/news/components/_components.event-media.scss
@@ -66,7 +66,7 @@ $media-icon-color: #fff;
     height: $media-icon-size;
     background: $media-icon-bg-color;
     border-radius: 5px;
-    opacity: .7;
+    opacity: 1;
     top: 10%;
     left: 5%;
     // margin-top: -($media-icon-size / 2);
