--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -97,4 +97,12 @@ $global-spacing-unit-small: $inuit-global-spacing-unit-small;
 //   .u-2/3
 
 $inuit-fractions: 1 2 3 4 5 6 !default;
+$mq-breakpoints: (
+    mobile:  420px,
+    tablet:  740px,
+    desktop: 980px,
+    wide:    1300px
+);
+
+
 $global-font-size: $inuit-global-font-size;
