--- a/assets/scss/news/components/_components.event.scss
+++ b/assets/scss/news/components/_components.event.scss
@@ -85,6 +85,12 @@
 
 .c-text-link {
     font-weight: 500;
+    color: $text-color;
+    box-shadow: 0px 2px 0px $accent-color;
+    &:hover {
+        color: $accent-color;
+        text-decoration: none;
+    }
 }
 
 .c-out {
