--- a/assets/scss/news/components/_components.horo-card.scss
+++ b/assets/scss/news/components/_components.horo-card.scss
@@ -37,7 +37,7 @@ $card-height: 320px;
             display: block;
             height: 100%;
             width: 100%;
-            opacity: 0.6;
+            opacity: .8;
             &:hover {
                 opacity: 1;
             }
