--- a/assets/scss/news/components/_components.quote-list-item.scss
+++ b/assets/scss/news/components/_components.quote-list-item.scss
@@ -1,7 +1,11 @@
 $quote-color: darken($bg-color, 10%);
 .c-quote-it {
     margin-bottom: $global-spacing-unit;
+    .c-share {
+        margin-top: 5px;
+    }
 }
+
 .c-quote-it__text {
     cursor: pointer;
     padding: 6px 10px;
@@ -16,10 +20,6 @@ $quote-color: darken($bg-color, 10%);
     text-indent: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-height: ($global-font-size * 1.1) * 3 + 22;
-    &:active,&:focus {
-        max-height: none;
-    }
     >i {
         color: $accent-color;
         font-size: 150%;
